--- a/src/static/css/landing.css
+++ b/src/static/css/landing.css
@@ -6,6 +6,11 @@
 }
 
 .landing {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background:
     linear-gradient(
       rgba(0, 0, 0, 0.5),
@@ -18,5 +23,9 @@
 }
 
 .header {
-  
+  text-transform: uppercase;
+  font-weight: 100;
+  font-size: 3.38em;
+  letter-spacing: .8px;
+  margin-bottom: 10px;
 }
