--- a/src/static/css/landing.css
+++ b/src/static/css/landing.css
@@ -29,3 +29,9 @@
   letter-spacing: .8px;
   margin-bottom: 10px;
 }
+
+.headerTitles {
+  text-transform: uppercase;
+  font-size: 1.2em;
+  letter-spacing: .8px;
+}
