--- a/src/static/css/landing.css
+++ b/src/static/css/landing.css
@@ -35,3 +35,63 @@
   font-size: 1.2em;
   letter-spacing: .8px;
 }
+
+.divider {
+  font-size: 1.5em;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.navButton {
+  text-decoration: none;
+  border: none;
+  color: #ffffff;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 1em;
+  font-size: 22px;
+  line-height: 1em;
+  margin: 15px 40px;
+  outline: none;
+  padding: 12px 40px 10px;
+  position: relative;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.navButton:before,
+.navButton:after {
+  border-color: transparent;
+  -webkit-transition: all 0.25s;
+  transition: all 0.25s;
+  border-style: solid;
+  border-width: 0;
+  content: "";
+  height: 24px;
+  position: absolute;
+  width: 24px;
+}
+
+.navButton:before {
+  border-color: #cc0000;
+  border-right-width: 2px;
+  border-top-width: 2px;
+  right: -5px;
+  top: -5px;
+}
+
+.navButton:after {
+  border-bottom-width: 2px;
+  border-color: #cc0000;
+  border-left-width: 2px;
+  bottom: -5px;
+  left: -5px;
+}
+
+.navButton:hover:before,
+.navButton.hover:before,
+.navButton:hover:after,
+.navButton.hover:after {
+  height: 100%;
+  width: 100%;
+}
