testing background colors

--- a/src/static/css/about.css
+++ b/src/static/css/about.css
@@ -2,6 +2,6 @@
   margin: 0;
   padding: 0;
   color: #fff;
-  background-color: #e5e8e2;
+  background-color: #797979;
   font-family: 'Roboto', sans-serif;
 }
