--- a/src/static/css/Header.css
+++ b/src/static/css/Header.css
@@ -2,11 +2,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 50px 0px;
 }
 
 .navButton {
   text-decoration: none;
   text-transform: uppercase;
+  font-size: 1.3em;
   font-weight: 100;
   margin: 20px;
 }
