--- a/src/static/css/Header.css
+++ b/src/static/css/Header.css
@@ -11,4 +11,26 @@
   font-size: 1.3em;
   font-weight: 100;
   margin: 20px;
+  position: relative;
+}
+
+.navButton:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #af0101;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.2s ease-in-out 0s;
+  transition: all 0.2s ease-in-out 0s;
+}
+
+.navButton:hover:before {
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
 }
