--- a/src/static/css/Header.css
+++ b/src/static/css/Header.css
@@ -1,5 +1,6 @@
 .navbar {
   display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   margin: 50px 0px;
@@ -33,4 +34,14 @@
   visibility: visible;
   -webkit-transform: scaleX(1);
   transform: scaleX(1);
+}
+
+/* -------- Media queries -------- */
+
+/* Smartphones (portrait and landscape) */
+
+@media only screen and (min-width : 320px) and (max-width : 480px) {
+  .navbar {
+    flex-direction: column;
+  }
 }
