--- a/src/static/css/about.css
+++ b/src/static/css/about.css
@@ -6,7 +6,15 @@
   font-family: 'Roboto', sans-serif;
 }
 
-.testText {
+.bio {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+
+}
+
+.bioText {
   width: 500px;
   line-height: 1.7em;
   letter-spacing: 1px;
