fixed landing page link borders

--- a/src/static/css/landing.css
+++ b/src/static/css/landing.css
@@ -70,7 +70,7 @@ nav {
 
 /* animation for nav button border */
 
-.navButton:before
+.navButton:before,
 .navButton:after {
   border-color: transparent;
   -webkit-transition: all 0.25s;
