adjust padding on nav buttons

--- a/src/static/css/Header.css
+++ b/src/static/css/Header.css
@@ -11,7 +11,8 @@
   text-transform: uppercase;
   font-size: 1.3em;
   font-weight: 100;
-  margin: 20px;
+  margin: 15px;
+  padding-bottom: 5px;
   position: relative;
 }
 
