--- a/src/static/css/Footer.css
+++ b/src/static/css/Footer.css
@@ -2,6 +2,11 @@
 
 .socialNav {
   padding-right: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 50px 0px;
 }
 
 .icon {
