--- a/src/static/css/Header.css
+++ b/src/static/css/Header.css
@@ -6,7 +6,7 @@
   margin: 50px 0px;
 }
 
-.navButton:before {
+.linkHover:before {
   content: "";
   position: absolute;
   width: 100%;
@@ -21,7 +21,7 @@
   transition: all 0.2s ease-in-out 0s;
 }
 
-.navButton:hover:before {
+.linkHover:hover:before {
   visibility: visible;
   -webkit-transform: scaleX(1);
   transform: scaleX(1);
